# demo_infrahub_pydantify

./: .infrahub.yml  Makefile  README.md  infrahubctl.toml  requirements.txt
infrahub/: Makefile  README.md  simple_interface_schema.yaml
infrahub/bootstrap/: create_toplology.py  protocols.py
infrahub/checks/: validate_interfaces.py
infrahub/objects/: 00_basics.yml  01_actions_and_triggers.yml  02_global_artifacts.yml
infrahub/queries/: GetInterfaceDetails.gql  GetInterfacefromDevice.gql  GetNetworkDevices.examle.json  GetNetworkDevices.gql
infrahub/schemas/: schema.yaml
infrahub/transforms/: containerlab.py  global_topology.py  protocols.py  srl_netconf.py  transform.py
infrahub/transforms/Modules/: xmlexporter.py
infrahub/transforms/PydanticStructure/: out.backup  out.py
lab/: clos.clab.yml
setup/: Makefile  README.md  docker-compose.infrahub.yaml  docker-compose.override.yaml  docker-compose.prefect.yaml
setup/infrahub-worker/: .dockerignore  Dockerfile  pyproject.toml
setup/infrahub-worker/src/custom_helper/: __init__.py  srl_netconf.py
setup/old_data/: init_data.py  init_group.py
